:bug: fix(program indicator page): Fixes
- Fixed issues with height overflowing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,10 +6,12 @@
     flex-direction: column;
     padding: 32px;
     font-size: 1rem;
+    overflow: auto;
+    
 }
 
 
-@media screen and (min-width: 2000px) {
+@media screen and (min-width: 2000px) and (max-width: 3200px) {
     .main-container {
         padding: 32px 512px;
     }
@@ -17,7 +19,7 @@
 
 @media screen and (min-width: 768px ) and (max-width: 2000px) {
     .main-container {
-        padding: 32px 256px;
+        padding: 32px 128px;
     }
 }
 
